# itmo-algorithms

./: .gitignore  CMakeLists.txt  README.md  input.txt
src/1/: agronomist.cpp  chaos.cpp  config.cpp  duons.cpp  fighting.cpp  zoo.cpp
src/2/: castle.cpp  cows.cpp  elephpotamus.cpp  number.cpp  shop.cpp  spy.cpp
src/3/: cars.cpp  goblins.cpp  manager.cpp  minimum.cpp  monobilliards.cpp  war.cpp
src/4/: cheating.cpp  civilization.cpp  currency.cpp  flights.cpp  pigs.cpp  pipelines.cpp
